Getting verlet in place
All that's left is determining the closest vertext, and then applying the movements.

--- a/FlipbookPhysics.csproj
+++ b/FlipbookPhysics.csproj
@@ -54,6 +54,7 @@
     <Compile Include="FBEngine.cs" />
     <Compile Include="FBQuadTree.cs" />
     <Compile Include="FBQuadTreeNode.cs" />
+    <Compile Include="Verlet\IVerletCollidable.cs" />
     <Compile Include="Shapes\FBCircle.cs" />
     <Compile Include="Shapes\FBLine.cs" />
     <Compile Include="Shapes\FBPolygon.cs" />
@@ -61,8 +62,11 @@
     <Compile Include="Shapes\FBRectangle.cs" />
     <Compile Include="Shapes\FBShape.cs" />
     <Compile Include="Verlet\FBPoint.cs" />
+    <Compile Include="Verlet\FBVerletCollisionChecker.cs" />
     <Compile Include="Verlet\FBVerletEdge.cs" />
     <Compile Include="Verlet\FBVerletEngine.cs" />
+    <Compile Include="Verlet\FBVerletRectangle.cs" />
+    <Compile Include="Verlet\FBVerletShape.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
