--- a/FlipbookPhysics.csproj
+++ b/FlipbookPhysics.csproj
@@ -56,6 +56,8 @@
     <Compile Include="FBEngine.cs" />
     <Compile Include="FBQuadTree.cs" />
     <Compile Include="FBQuadTreeNode.cs" />
+    <Compile Include="FBSpatialHash.cs" />
+    <Compile Include="List2D.cs" />
     <Compile Include="Verlet\IVerletCollidable.cs" />
     <Compile Include="Colliders\FBCircle.cs" />
     <Compile Include="Colliders\FBLine.cs" />
