AABB's implemented, Spatial Hash working
Spatial hash converted to use dictionary instead of list of lists. Physics working with new spatial hash. Don't know if any speed improvement yet.

--- a/FlipbookPhysics.csproj
+++ b/FlipbookPhysics.csproj
@@ -53,6 +53,7 @@
     <Compile Include="FBBody.cs" />
     <Compile Include="FBBodyFactory.cs" />
     <Compile Include="FBBodyType.cs" />
+    <Compile Include="FBBresenhamHelper.cs" />
     <Compile Include="FBEngine.cs" />
     <Compile Include="FBQuadTree.cs" />
     <Compile Include="FBQuadTreeNode.cs" />
