Working on V2, streamlining workflow and objects.

--- a/FlipbookPhysics.csproj
+++ b/FlipbookPhysics.csproj
@@ -45,20 +45,43 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ColliderChecker.cs" />
+    <Compile Include="Bodies\FBCircleBody.cs" />
+    <Compile Include="Bodies\FBPolygonBody.cs" />
+    <Compile Include="Bodies\FBRectangleBody.cs" />
     <Compile Include="CollisionAction.cs" />
     <Compile Include="CollisionCheckOrder.cs" />
     <Compile Include="CollisionEventHandler.cs" />
     <Compile Include="CollisionInfo.cs" />
+    <Compile Include="Extensions.cs" />
+    <Compile Include="CollisionResponseCreators\FBBasicCollisionResponseCreator.cs" />
     <Compile Include="FBBody.cs" />
     <Compile Include="FBBodyFactory.cs" />
     <Compile Include="FBBodyType.cs" />
     <Compile Include="FBBresenhamHelper.cs" />
+    <Compile Include="FBDebugDraw.cs" />
     <Compile Include="FBEngine.cs" />
     <Compile Include="FBQuadTree.cs" />
     <Compile Include="FBQuadTreeNode.cs" />
     <Compile Include="FBSpatialHash.cs" />
+    <Compile Include="CollisionResponseCreators\FBVelocityCollisionResponseCreator.cs" />
+    <Compile Include="CollisionResponseCreators\ICollisionResponseCreator.cs" />
     <Compile Include="List2D.cs" />
+    <Compile Include="V2\CustomBodies\FBBasicBody.cs" />
+    <Compile Include="V2\CustomBodies\FBVelocityBody.cs" />
+    <Compile Include="V2\CustomCollisionResolvers\FBBasicCollisionResolver.cs" />
+    <Compile Include="V2\CustomCollisionResolvers\FBVelocityCollisionResolver.cs" />
+    <Compile Include="V2\FBBody.cs" />
+    <Compile Include="V2\FBColliderFactory.cs" />
+    <Compile Include="V2\FBCollision.cs" />
+    <Compile Include="V2\FBCollisionChecker.cs" />
+    <Compile Include="V2\FBCollisionDetection.cs" />
+    <Compile Include="V2\FBCollisionMovementInformation.cs" />
+    <Compile Include="V2\FBPotentialCollisionPair.cs" />
+    <Compile Include="V2\FBScene.cs" />
+    <Compile Include="V2\FBSpatialHash.cs" />
+    <Compile Include="V2\IFBBody.cs" />
+    <Compile Include="V2\IFBCollisionResolver.cs" />
+    <Compile Include="V2\IFBSpatial.cs" />
     <Compile Include="Verlet\IVerletCollidable.cs" />
     <Compile Include="Colliders\FBCircle.cs" />
     <Compile Include="Colliders\FBLine.cs" />
